// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CnCCommonTemplate Page should render correctly 1`] = `
<Styled(View)
  isPayPalWebViewEnable={false}
>
  <Styled(View)
    isPayPalWebViewEnable={false}
  >
    <Styled(View)>
      <Connect(CouponContainer)
        isCheckout={true}
        navigation={Object {}}
        pageCategory={Object {}}
      />
    </Styled(View)>
    <View>
      <Connect(OrderLedgerContainer)
        navigation={Object {}}
        pageCategory={Object {}}
      />
    </View>
    <Styled(View)>
      <Connect(BonusPointsDays) />
    </Styled(View)>
    <Styled(View)
      isPayPalWebViewEnable={false}
      showPayPalButton={false}
    >
      <Styled(TouchableOpacity)
        onPress={[MockFunction]}
      >
        <Styled(BodyCopy)
          accessibilityText=""
          color="white"
          dataLocator="reviewBtn"
          fontFamily="secondary"
          fontSize="fs13"
          fontWeight="extrabold"
          margin={null}
          numberOfLines={null}
          text="Shipping"
          textDecoration={null}
        />
      </Styled(TouchableOpacity)>
    </Styled(View)>
  </Styled(View)>
</Styled(View)>
`;

exports[`CnCCommonTemplate Page should render correctly if on confirmation page 1`] = `
<Styled(View)
  isPayPalWebViewEnable={false}
>
  <View>
    <Connect(OrderLedgerContainer)
      isConfirmationPage={true}
      pageCategory={Object {}}
      showAccordian={true}
    />
    <Connect(ConfirmationAccountFormContainer) />
    <Connect(PersonalizedCoupons) />
    <Connect(Recommendations)
      page="checkout"
      variation="moduleO"
    />
  </View>
</Styled(View)>
`;

exports[`CnCCommonTemplate Page should render payment buttons correctly if on confirmation page for registered user 1`] = `
<Styled(View)
  isPayPalWebViewEnable={true}
>
  <View>
    <Connect(OrderLedgerContainer)
      isConfirmationPage={true}
      pageCategory={Object {}}
      showAccordian={true}
    />
    <Styled(View)>
      <Styled(View)>
        <Styled(BodyCopy)
          accessibilityText=""
          dataLocator=""
          fontFamily="secondary"
          fontSize="fs16"
          fontWeight="regular"
          margin={null}
          numberOfLines={null}
          text="Paid with "
          textDecoration={null}
        />
      </Styled(View)>
      <View>
        <CardImage
          card={
            Object {
              "ccBrand": "VENMO",
              "ccType": "VENMO",
              "defaultInd": true,
              "userName": "test-user",
            }
          }
          cardNumber="test-user"
        />
      </View>
    </Styled(View)>
    <Connect(PersonalizedCoupons) />
    <Connect(Recommendations)
      page="checkout"
      variation="moduleO"
    />
  </View>
</Styled(View)>
`;

exports[`CnCCommonTemplate Page should render paypal button correctly if on confirmation page 1`] = `
<Styled(View)
  isPayPalWebViewEnable={true}
>
  <View>
    <Connect(OrderLedgerContainer)
      isConfirmationPage={true}
      pageCategory={Object {}}
      showAccordian={true}
    />
    <Styled(View)>
      <Styled(View)>
        <Styled(BodyCopy)
          accessibilityText=""
          dataLocator=""
          fontFamily="secondary"
          fontSize="fs16"
          fontWeight="regular"
          margin={null}
          numberOfLines={null}
          text="Paid with "
          textDecoration={null}
        />
      </Styled(View)>
      <View>
        <CardImage
          card={
            Object {
              "ccBrand": "VENMO",
              "ccType": "VENMO",
              "defaultInd": true,
              "userName": "test-user",
            }
          }
          cardNumber="test-user"
        />
      </View>
    </Styled(View)>
    <Connect(ConfirmationAccountFormContainer) />
    <Connect(PersonalizedCoupons) />
    <Connect(Recommendations)
      page="checkout"
      variation="moduleO"
    />
  </View>
</Styled(View)>
`;

exports[`CnCCommonTemplate Page should render paypal button correctly if on confirmation page for registered user 1`] = `
<Styled(View)
  isPayPalWebViewEnable={true}
>
  <View>
    <Connect(OrderLedgerContainer)
      isConfirmationPage={true}
      pageCategory={Object {}}
      showAccordian={true}
    />
    <Styled(View)>
      <Styled(View)>
        <Styled(BodyCopy)
          accessibilityText=""
          dataLocator=""
          fontFamily="secondary"
          fontSize="fs16"
          fontWeight="regular"
          margin={null}
          numberOfLines={null}
          text="Paid with "
          textDecoration={null}
        />
      </Styled(View)>
      <View>
        <CardImage
          card={
            Object {
              "ccBrand": "VENMO",
              "ccType": "VENMO",
              "defaultInd": true,
              "userName": "test-user",
            }
          }
          cardNumber="test-user"
        />
      </View>
    </Styled(View)>
    <Connect(PersonalizedCoupons) />
    <Connect(Recommendations)
      page="checkout"
      variation="moduleO"
    />
  </View>
</Styled(View)>
`;

exports[`CnCCommonTemplate Page should render venmo payment correctly if on confirmation page 1`] = `
<Styled(View)
  isPayPalWebViewEnable={false}
>
  <View>
    <Connect(OrderLedgerContainer)
      isConfirmationPage={true}
      pageCategory={Object {}}
      showAccordian={true}
    />
    <Styled(View)>
      <Styled(View)>
        <Styled(BodyCopy)
          accessibilityText=""
          dataLocator=""
          fontFamily="secondary"
          fontSize="fs16"
          fontWeight="regular"
          margin={null}
          numberOfLines={null}
          text="Paid with "
          textDecoration={null}
        />
      </Styled(View)>
      <View>
        <CardImage
          card={
            Object {
              "ccBrand": "VENMO",
              "ccType": "VENMO",
              "defaultInd": true,
              "userName": "test-user",
            }
          }
          cardNumber="test-user"
        />
      </View>
    </Styled(View)>
    <Connect(ConfirmationAccountFormContainer) />
    <Connect(PersonalizedCoupons) />
    <Connect(Recommendations)
      page="checkout"
      variation="moduleO"
    />
  </View>
</Styled(View)>
`;
